# gdtw

./: .gitignore  CMakeLists.txt  Datasets.txt  INSTUCTIONS For Running GDTW Code.docx  Instructions.txt  README.md  ReadMe.txt  run.sh
1NN Classification Code/: calculate_distance_mink.m  calculate_distance_ucr_euclidean.m  distfun_manhatan.m  distfun_mink.m  dtw_manhattan_mex.cpp  dtw_mink.m  dtw_mink_mex.cpp  main_manhatan.m  main_mink.m  main_ucr_euclidean.m
Archive/1NN Classification Code/: calculate_distance_manhatan.m  distfun_ucr_euclidean.m  dtw_manhatan.m  dtw_manhattan_mex.mexw64  one_NN_manhatan.m  one_NN_mink.m  one_NN_ucr_euclidean.m
Archive/hierarchial clustering results/: DTW-MinkSeq2.fig
Archive/hierarchial clustering results/Matlab scripts/: dtw_euclidean.m
GDTW_Experiments/: GDTWCode.pro  GDTWCode.pro.user.1.3  main.cpp  online.h
archiv/: main_old.cpp
archiv/1NN Classification Code/: calculate_distance_ucr_euclidean.m  dtw_mink_mex.cpp  dtw_mink_mex.mexw64
archiv/hierarchial clustering results/Matlab scripts/: agglomerativeC.m  dtw_manhatan.m
archive/: Instructions.txt  online_old.cpp  online_old.h
archive/1NN Classification Code/: calculate_distance_manhatan.m  calculate_distance_mink.m  distfun_manhatan.m  distfun_mink.m  distfun_ucr_euclidean.m  dtw_manhatan.m  dtw_manhattan_mex.cpp  dtw_mink.m  main_manhatan.m  main_mink.m  main_ucr_euclidean.m  one_NN_manhatan.m  one_NN_mink.m  one_NN_ucr_euclidean.m
archive/hierarchial clustering results/: DTW-MDSeq2.fig  DTW-MDSeq4.fig  DTW-MinkSeq3.fig
archive/hierarchial clustering results/Matlab scripts/: dtw_euclidean.m  dtw_mink.m
experiments/: NearestNeighbor.m  definitions.m  experiments.m  gdtw_dist.m
hierarchial clustering results/: DTW-EDSeq1.fig  DTW-EDSeq2.fig  DTW-EDSeq3.fig  DTW-EDSeq4.fig  DTW-EDSeq5.fig  DTW-MDSeq1.fig  DTW-MDSeq3.fig  DTW-MDSeq5.fig  DTW-MinkSeq1.fig  DTW-MinkSeq4.fig  DTW-MinkSeq5.fig
hierarchial clustering results/Matlab scripts/: agglomerativeC.m  dtw_manhatan.m  dtw_mink.m
lib/: CMakeLists.txt  DistanceAPI.cpp  Exception.hpp  MatlabMex.cpp  TimeSeries.cpp  TimeSeries.hpp  TimeSeriesSet.cpp  TimeSeriesSet.hpp
lib/distance/: Chebyshev.hpp  Cosine.hpp  Distance.cpp  Distance.hpp  Euclidean.hpp  Manhattan.hpp  Sorensen.hpp
online_gdtw/: CMakeLists.txt  GDTWOnline.cpp  GDTWOnline.hpp  Main.cpp  online_old.h
results/nn/: chebyshev.txt  euclidean.txt  manhattan.txt
test/: CMakeLists.txt  GdtwOnlineTest.cpp
test/distance/: SorensenTest.cpp
